objects/CIP_History_Tasks__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Assigned To:</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CIP_History__c</fullName>
        <label>CIP History</label>
        <referenceTo>Client_Intake_Process_History__c</referenceTo>
        <relationshipLabel>CIP History Tasks</relationshipLabel>
        <relationshipName>CIP_History_Tasks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Department_Indicator__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Department Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reject_Reasons__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Reject Reasons</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDCLegacyID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SFDCLegacyID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Legacy_Client_Intake_Process__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SFDC Legacy Client Intake Process</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>CIP History Tasks</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>CIP History Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CIP History Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>